# tt-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_AGENT_PROMPT.md  Dockerfile  Dockerfile.stats  EXECUTIVE_SUMMARY.md  INDEX.md  LICENSE.md  QUICK_FIX_REFERENCE.md  README.md  README_CODEFIX.md  bot_tag.txt  config.ini  create_stats_messages.py  create_tables.py  docker-compose.yml  example-config.ini  example-sqlite.db  fix_db.py  locale.json  locale.py  main-paid.py  main.py  maintenance_bot.py  migrate_db.py  original.txt  podp.txt  pyproject.toml  requirements.txt  sqlite-clear.db  stats.py  utils.py
.github/workflows/: code-review.yml  docker-build-manual.yml  docker-build-on-tag.yml  docker-build.yml  opencode.yml
data/: app_factory.py  bot_loader.py  config.py  database.py  db_service.py  db_utils.py  loader.py
data/locale/: ar.json  en.json  hi.json  id.json  ru.json  so.json  uk.json  vi.json
data/models/: __init__.py  music.py  user.py  users.py  video.py
docs/: CODEBASE_MAP.md  STATS_MESSAGES.md
handlers/: __init__.py  admin.py  advert.py  get_inline.py  get_music.py  get_video.py  inline_slideshow.py  instagram.py  lang.py  link_dispatcher.py  stats.py  user.py
instagram_api/: __init__.py  client.py  exceptions.py  models.py
locale/: ar.json  en.json  hi.json  id.json  ru.json  so.json  uk.json  vi.json
media_types/: __init__.py  errors.py  http_session.py  image_processing.py  send_images.py  send_music.py  send_video.py  storage.py  ui.py
migration/: add_ad_columns.py  create_tables.py  example-config.ini  fix_db.py  migrate_db.py  remove_ad_columns.py
misc/: adsgram.py  botstat.py  deprecated.py  queue_manager.py  stats.py  tiktok_api.py  utils.py  video_types.py
scripts/: create-stats-messages.sh
stats/: __init__.py  graphs.py  loader.py  misc.py  router.py
tiktok_api/: __init__.py  client.py  exceptions.py  models.py  proxy_manager.py
tiktok_scrapper/: Dockerfile  README.md  __init__.py  app.py  client.py  config.py  models.py  pyproject.toml
tiktok_scrapper/app/: app.py  dependencies.py  models.py
tiktok_scrapper/app/routes/: video.py
tiktok_scrapper/tiktok_scrapper/: __init__.py  app.py  client.py  config.py
tiktok_scrapper/tiktok_scrapper/routes/: __init__.py  health.py  music.py
tt-scrap/: Dockerfile  README.md  pyproject.toml
tt-scrap/app/: app.py  base_client.py  config.py  exceptions.py  models.py  registry.py
tt-scrap/app/routes/: __init__.py
tt-scrap/app/services/: __init__.py
tt-scrap/app/services/tiktok/: __init__.py  client.py  config.py  parser.py  routes.py
