[project]
name = "tt-bot"
version = "4.5.0"
description = "Telegram bot for downloading all types of videos from TikTok using undocumented TikTok api."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram==3.22.0",
    "APScheduler==3.11.0",
    "pandas==2.3.3",
    "matplotlib",
    "aiohttp==3.13.3",
    "SQLAlchemy==2.0.44",
    "asyncpg==0.30.0",
    "Pillow==12.0.0",
    "pillow-heif==1.1.1",
    "python-dotenv==1.1.1",
]

[tool.uv]
# This is an application, not a library package
package = false
