[project]
name = "tt-bot"
version = "4.5.0"
description = "Telegram bot for downloading all types of videos from TikTok using undocumented TikTok api."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiogram==3.24.0",
    "APScheduler==3.11.2",
    "pandas==2.3.3",
    "matplotlib",
    "aiohttp==3.13.3",
    "SQLAlchemy==2.0.45",
    "asyncpg==0.31.0",
    "Pillow==12.1.0",
    "pillow-heif==1.1.1",
    "python-dotenv==1.2.1",
    "yt-dlp==2025.12.08",
    # curl_cffi version must be compatible with yt-dlp's BROWSER_TARGETS
    # Check yt_dlp/networking/_curlcffi.py for supported versions when updating yt-dlp
    "curl_cffi>=0.9.0,<0.14.0",
]

[tool.uv]
# This is an application, not a library package
package = false
